Changelog
---------
3.9.3
- marauroa can invoke an external command (email_command in server.ini) with the token and email-address on account creation
- use a dedicated email table

3.9.2
- workaround for IllegalArgumentException in proxy check (see http://icedtea.classpath.org/bugzilla/show_bug.cgi?id=1055 ) 

3.9.1
- added support for Sha512Crypt with salt and pepper
- fixed cacheable flag being ignored

3.9
- failed logins are now logged with distinct status values
- client support for skippable empty perceptions
- ban messages are no longer restricted 256,
  if both server and client use the new protocol version 34
- added RPClass support (type checks and transfer compression) to RPAction
- content transfer includes a md5 hash of the content,
  if both server and client use the new protocol version 34
- fixed a bug which caused the server to use the client protocol version in its messages, even if it was higher than the version supported by the server
- automatically try to use a configured SOCKS-proxy. If it cannot be used, Marauroa falls back to direct connections
- RPRuleProcessorImpl provides a default implementation for IRPRuleProcessor
- new server.ini variable server_abuseContact to add a sentence with contact information to the ban dialog.
- use ENGINE instead of TYPE on table creation to be compatible with MySQL 5.5


3.8.7
- performance improvement by not deep copying all player objects every turn.
- performance improvement by skipping expensive RPBOject.id uniqueness validation during cloning of RPSlots
- performance improvement by removing redundant calls to Attribute.has() and RPObject.getID()
- increased client side timeout while the server is processing the login (may be caused by slow database queries)
- defined better indices for loginEvent designed to get the number of recently failed logins question faster

3.8.6
- performance optimization in RPObject.getDifference() by drastically reducing the number of RPobject instantiations