@@ -1,6 +1,7 @@
 Changelog
 ---------
 3.9.3
+- retry database command on connection loss to the database server
 - marauroa can invoke an external command (email_command in server.ini) with the token and email-address on account creation
 - use a dedicated email table
 
